--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -20,7 +20,7 @@ h1 {
     margin-top: 20px;
     text-align: end;
     font-weight: bold;
-    font-size: 45px;
+    font-size: 2.5rem;
     color: #2a607c;
     background-color: #9ebec7;
     display: inline-block;
@@ -33,7 +33,7 @@ p {
 
 h2 {
     margin-right: 10px;
-    font-size: 50px;
+    font-size: 2rem;
     text-align: end;
 }
 
@@ -59,6 +59,7 @@ a {
 
 p {
     font-size: 20px;
+    line-height: 2em;
 }
 
 figure,
@@ -67,6 +68,7 @@ img {
     display: inline-flex;
     justify-content: center;
     padding: 20px;
+    /* flex-basis: 100%; */
 }
 
 footer {
@@ -75,10 +77,13 @@ footer {
     color: #2a607c;
 }
 
+section > div {
+    margin-bottom: 20px;
+}
+
 #profile {
     display: flex;
     position: absolute;
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     height: 150px;
@@ -143,3 +148,10 @@ footer {
 .portfolio-contact {
     list-style-type: none;
 }
+
+@media screen and (max-width: 992px) {
+    body {
+        font-size: 14px;
+    }
+}
+
