--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -58,7 +58,7 @@ a {
 }
 
 p {
-    font-size: 20px;
+    font-size: 0.5rem;
     line-height: 2em;
 }
 
@@ -68,7 +68,6 @@ img {
     display: inline-flex;
     justify-content: center;
     padding: 20px;
-    /* flex-basis: 100%; */
 }
 
 footer {
@@ -92,6 +91,20 @@ section > div {
     z-index: 1;
     border-radius: 50%;
     float: right;
+}
+
+.portfolio-main-app {
+    display: flex;
+    flex-basis: 100%;
+}
+.portfolio-secondary-app {
+    display: flex;
+    flex-basis: 50%;
+}
+
+.portfolio-secondary-app-a {
+    display: flex;
+    flex-basis: 100%;
 }
 
 .portfolio-img {
@@ -124,12 +137,13 @@ section > div {
 }
 
 .portfolio-para {
-    font-size: 15px;
+    font-size: 1rem;
+    margin: 0 20px;
 }
 
 .portfolio-images {
     height: 250px;
-    width: 400px;
+    width: 100%;
     padding: 0;
     border: 5px solid #9ebec7;
 }
@@ -143,6 +157,7 @@ section > div {
     top: 40px;
     height: 70px;
     padding: 10px;
+    font-size: 1.7rem;
 }
 
 .portfolio-contact {
@@ -151,7 +166,25 @@ section > div {
 
 @media screen and (max-width: 992px) {
     body {
-        font-size: 14px;
+        font-size: 12px;
+    }
+    .portfolio-secondary-app {
+        flex-basis: 50%;
     }
 }
+
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 10px;
+    }
+    .portfolio-secondary-app {
+        flex-basis: 100%;
+    }
+  }
+  
+@media screen and (max-width: 576px) {
+    body {
+        font-size: 8px;
+    }
+  }
 
