--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -5,6 +5,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+/* Element selectors */
 body {
     background-color: lightcyan;
     font-family: 'Poppins', sans-serif;
@@ -58,7 +59,6 @@ a {
 }
 
 p {
-    font-size: 0.5rem;
     line-height: 2em;
 }
 
@@ -80,17 +80,28 @@ section > div {
     margin-bottom: 20px;
 }
 
+/* Id selectors */
 #profile {
     display: flex;
     position: absolute;
     justify-content: center;
     align-items: center;
     height: 150px;
-    width: 150px;
+    width: 10%;
     flex-shrink: 0;
     z-index: 1;
     border-radius: 50%;
-    float: right;
+}
+
+/* Class selectors */
+.portfolio-intro {
+    position: absolute;
+    top: 175px;
+    margin: 10px;
+    background-color: #9ebec7;
+    font-size: 1.5rem;
+    padding: 0 5px;
+    font-weight: bold;
 }
 
 .portfolio-main-app {
@@ -108,6 +119,9 @@ section > div {
 }
 
 .portfolio-img {
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: center;
     position: relative;
     height: 250px;
     width: 100%;
@@ -164,6 +178,7 @@ section > div {
     list-style-type: none;
 }
 
+/* Media queries for responsive layout*/
 @media screen and (max-width: 992px) {
     body {
         font-size: 12px;
