--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -92,6 +92,10 @@ section > div {
     font-size: 2rem;
 }
 
+/* .navbar-toggler {
+    border-color:white;
+} */
+
 .nav-link {
     color: #2a607c;
     font-size: 1.2rem;
