Updated index.html and style.css to style the project titles

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -22,7 +22,7 @@ h1 {
     font-weight: bold;
 }
 
-h2,
+
 p {
     color: #5e6275;
 }
@@ -31,6 +31,7 @@ h2 {
     margin-right: 10px;
     font-size: 2rem;
     text-align: end;
+    color: #254D32;
 }
 
 nav {
@@ -66,6 +67,7 @@ footer {
     font-family: 'Dancing Script', cursive;
     text-align:center;
     color: #2a607c;
+    /* background-color:#76BC84; */
 }
 
 section > div {
@@ -174,8 +176,10 @@ section > div {
 
 .portfolio-heading {
     position: absolute;
-    color: #2a607c;
-    background-color:#9ebec7;
+    /* color: #2a607c; */
+    color: #254D32;
+    /* background-color:#9ebec7; */
+    background-color:#D6EBD6;
     z-index: 1;
     text-decoration: none;
     top: 40px;
@@ -186,6 +190,7 @@ section > div {
 
 .portfolio-contact {
     list-style-type: none;
+    font-size: 1.5rem;
 }
 
 /* Media queries for responsive layout*/
